--- a/index.html
+++ b/index.html
@@ -4,9 +4,98 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
+    <title>Alif's new year new mission</title>
 </head>
 <body>
+    <!-- Banner  part-->
+
+
+    <div class="banner">
+
+        <div class="empty">
+
+        </div>
+
+        <div class="banner-content">
+            <h1 class="banner-title">All Thinks Are Possible If You believe</h1>
+            <div class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</div>
+
+            <button class="banner-btn">Contact Me</button>
+
+        </div>
+
+
+
+
+    </div>
+
+
+    <main>
+
+
+
+        <section class="failure">
+
+            <div class="failure-content">
+
+                <div class="failure image">
+                    <img src="images/person.png" alt="">
+                </div>
+
+                <div class="failure-reason">
+
+                    <h3 class="failure-title">My failures of previous year</h3>
+                    <p class="failure-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+
+                    <ul class="failure-reason-list">
+                        <li>Contrary to popular belief, is not simply.</li>
+                        <li>Contrary to popular belief.</li>
+                        <li>Contrary to popular is not simply.</li>
+                        <li>Contrary to popular belief, is not simply.</li>
+                        <li>Contrary to popular simply.</li>
+                    </ul>
+
+
+                </div>
+            </div>
+        </section>
+
+        <section class="plan">
+
+            <h3 class="plan-header">My Plans</h3>
+
+            <div class="plan-content">
+                <div class="plan-item">
+                    <img src="images/icons/web.png" alt="" class="plan-image">
+                    <h3 class="plan-title">Web Development</h3>
+                    <p class="plan-description">I want to start</p>
+                </div>
+                <div class="plan-item">
+                    <img src="images/icons/js.png" alt="" class="plan-image">
+                    <h3 class="plan-title">Javascript</h3>
+                    <p class="plan-description">I want to learn</p>
+                </div>
+                <div class="plan-item">
+                    <img src="images/icons/smoke.png" alt="" class="plan-image">
+                    <h3 class="plan-title">Smoking Habit</h3>
+                    <p class="plan-description">I want to end</p>
+                </div>
+                <div class="plan-item">
+                    <img src="images/icons/ecom.png" alt="" class="plan-image">
+                    <h3 class="plan-title">ecommerce</h3>
+                    <p class="plan-description">I want to develop</p>
+                </div>
+            </div>
+
+
+        </section>
+
+
+    </main>
     
 </body>
 </html>
