--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
     <title>Alif's new year new mission</title>
 </head>
+
 <body>
     <!-- Banner  part-->
 
@@ -22,9 +24,10 @@
 
         <div class="banner-content">
             <h1 class="banner-title">All Thinks Are Possible If You believe</h1>
-            <div class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</div>
+            <div class="banner-description">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered alteration in some form, by injected humour, or randomised words</div>
 
-            <button class="banner-btn">Contact Me</button>
+            <button class="banner-btn">Contact Us</button>
 
         </div>
 
@@ -49,7 +52,9 @@
                 <div class="failure-reason">
 
                     <h3 class="failure-title">My failures of previous year</h3>
-                    <p class="failure-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                    <p class="failure-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It
+                        has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
+                        Richard McClintock.</p>
 
                     <ul class="failure-reason-list">
                         <li>Contrary to popular belief, is not simply.</li>
@@ -94,8 +99,47 @@
 
         </section>
 
+        <section class="contact">
+
+            <div class="image-with-gradient">
+
+                <div class="text">
+                    <p class="advice">Awlays keep a positive mindset</p>
+                    <button class="contact-btn">Call Now</button>
+                </div>
+
+            </div>
+        </section>
+
 
     </main>
-    
+
+    <footer>
+
+        <div class="footer-content">
+
+            <div class="future">
+                <h3 class="title">Future</h3>
+                <p class="future-description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <p class="email">Email : alomgirhossainalif@gmail.com</p>
+                <p class="phone">Phone : 01500234253</p>
+                <a href="" class="social-media"><img src="images/icons/fb.png" alt=""></a>
+                <a href="" class="social-media"><img src="images/icons/twitter.png" alt=""></a>
+                <a href="" class="social-media"><img src="images/icons/youtube.png" alt=""></a>
+            </div>
+
+            <div class="subscribe">
+
+                <h4 class="subscribe-title">Subscribe</h4>
+                <input type="email" name="" id="" placeholder="Enter your email">
+                <br>
+                <button class="subscribe-btn">Subscribe</button>
+            </div>
+
+        </div>
+    </footer>
+
 </body>
+
 </html>
