--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
                         has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
                         Richard McClintock.</p>
 
-                    <ul class="failure-reason-list">
-                        <li>Contrary to popular belief, is not simply.</li>
-                        <li>Contrary to popular belief.</li>
-                        <li>Contrary to popular is not simply.</li>
-                        <li>Contrary to popular belief, is not simply.</li>
-                        <li>Contrary to popular simply.</li>
-                    </ul>
+
+                    <p><span class="checkmark">&#10004</span> Contrary to popular belief, is not simply.</p>
+                    <p><span class="checkmark">&#10004</span> Contrary to popular belief.</p>
+                    <p><span class="checkmark">&#10004</span> Contrary to popular is not simply.</p>
+                    <p><span class="checkmark">&#10004</span> Contrary to popular belief, is not simply.</p>
+                    <p><span class="checkmark">&#10004</span> Contrary to popular simply.</p>
+
 
 
                 </div>
